--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: De-millioenen-uit-Deli_65660
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 65660-h/images/frontcover.jpg
 creator:
   author:
     agent_name: Brand, J. van den
@@ -10,6 +13,8 @@ creator:
     gutenberg_agent_id: '53449'
     url: http://www.gutenberg.org/2009/agents/53449
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/65660#De-millioenen-uit-Deli
 gutenberg_issued: '2021-06-21'
 gutenberg_type: Text
 identifiers:
